Add a user preference to disable extension
Bug: T217179
Change-Id: Ia124d6ac163b131fb74371fc346593c3409cac6b
(cherry picked from commit eaa7253569a312f17c5f98ad48a9562b564b994d)

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -5,5 +5,7 @@
 		]
 	},
 	"displaytitle-desc": "Uses displaytitle page property in link text, subtitle, and talk page title; provides parser function to query displaytitle",
-	"displaytitle-talkpagetitle": "Discuss $1"
+	"displaytitle-talkpagetitle": "Discuss $1",
+	"prefs-displaytitle": "Display title",
+	"prefs-displaytitle-enable": "Enable display title in links"
 }
