Revert "Add a user preference to disable extension"
This reverts commit eaa7253569a312f17c5f98ad48a9562b564b994d.

Reason for revert: this patch caused T342727. It also introduces undesirable latency in link creation.

Bug: T342727
Change-Id: I632c174928fa542a4a696841aec8fccd15679167
(cherry picked from commit b038a40e029f4bf339c9aebfaee19496069ec719)

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -9,7 +9,5 @@
 		]
 	},
 	"displaytitle-desc": "{{desc|name=Display Title|url=https://www.mediawiki.org/wiki/Extension:DisplayTitle}}",
-	"displaytitle-talkpagetitle": "Format string for the title of a talk page; $1 is the displaytitle of the subject page corresponding to the talk page.\n{{Identical|Discuss}}",
-	"prefs-displaytitle": "Used in user preferences.\\n{{Identical|Display title}}",
-	"prefs-displaytitle-enable": "Used in [[Special:Preferences]], tab \\\"Display title\\\"."
+	"displaytitle-talkpagetitle": "Format string for the title of a talk page; $1 is the displaytitle of the subject page corresponding to the talk page.\n{{Identical|Discuss}}"
 }
